--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div>
-    <header class="site-header" style="background-image: url('{{ site.banner | escape | prepend: "/assets/" | relative_url  }}'); width: 100%;">
+    <header class="site-header" style="background-image: url('{{ site.banner | escape | prepend: "/assets/" | relative_url  }}'); background-position: center; background-repeat: no-repeat;">
         <div class="banner">
             <div class="img-container">
                 {% if site.logo %}
