--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -8,6 +8,9 @@
         - The author page has an image and some text.
     The layout and styling is inspired by the Book Lite theme from Wordpress, where it was originally published. */
 /* */
+body, html {
+  height: 100%; }
+
 img {
   display: block;
   margin: auto;
@@ -39,16 +42,24 @@ a {
   vertical-align: baseline; }
 
 header {
+  height: 40%;
   background-image: url("/assets/banner.jpg");
   background-size: cover;
-  display: block;
-  height: 500px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  max-width: 100%;
-  padding-bottom: 0px;
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
-  bottom: 0px; }
+  /*
+        background-image: url("/assets/banner.jpg")
+        background-size: cover
+        display: block
+        height: 500px
+        margin-bottom: 0px
+        margin-top: 0px
+        max-width: 100%
+        padding-bottom: 0px
+        position: relative
+        bottom: 0px */
+  /* */ }
   header .navbar {
     text-align: justify;
     font-size: 16px;
@@ -68,17 +79,19 @@ header {
       position: relative;
       text-decoration: none;
       color: white; }
-  header > .site-title {
-    text-transform: uppercase;
-    font-size: 48px;
+  header .header-text {
     text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 50%;
     color: white;
-    margin-top: 300px; }
-  header > .site-subtitle {
-    font-style: italic;
-    font-size: 17px;
-    text-align: center;
-    color: white; }
+    transform: translate(-50%, -50%); }
+    header .header-text > .site-title {
+      text-transform: uppercase;
+      font-size: 48px; }
+    header .header-text > .site-subtitle {
+      font-style: italic;
+      font-size: 17px; }
 
 .content {
   max-width: 750px;
