--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -49,24 +49,19 @@ header {
   background-repeat: no-repeat;
   position: relative; }
   header .navbar {
-    text-align: justify;
-    font-size: 16px;
-    line-height: 29px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.5); }
-    header .navbar:after {
-      content: '';
-      display: inline-block;
-      width: 100%; }
-    header .navbar:before {
-      content: '';
-      display: block; }
+    overflow: hidden; }
     header .navbar > .navbar-item {
-      display: inline-block;
-      padding: 0.25em 1.5em;
-      position: relative;
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
       text-decoration: none;
-      color: white; }
+      font-size: 17px; }
+    header .navbar .icon {
+      display: none;
+      color: white;
+      padding-left: 8px; }
   header .header-text {
     text-align: center;
     position: absolute;
@@ -76,10 +71,12 @@ header {
     transform: translate(-50%, -50%); }
     header .header-text > .site-title {
       text-transform: uppercase;
-      font-size: 48px; }
+      font-size: min(12vh, 55px, 90vw);
+      line-height: min(12vh * 1.2, 55px * 1.2, 90vw); }
     header .header-text > .site-subtitle {
       font-style: italic;
-      font-size: 17px; }
+      font-size: 2vh;
+      line-height: 3vh; }
 
 .content {
   max-width: 750px;
@@ -105,3 +102,19 @@ header {
 
 .content > p:first-of-type::first-line {
   text-transform: uppercase; }
+
+/* Make the navbar responsive, to display hamburger menu on small screens. */
+/* When the screen is less than 600 pixels wide, hide all links, except for the hamburger menu. */
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child) {
+    display: none; }
+  .navbar a.icon {
+    float: left;
+    display: block; }
+  /* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
+  .navbar.responsive {
+    position: relative; }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left; } }
