--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -53,25 +53,43 @@ header
     background-repeat: no-repeat
     position: relative
 
+    // .navbar
+    //     text-align: justify
+    //     font-size: 16px
+    //     line-height: 29px
+    //     height: 50px
+    //     background-color: rgba(0, 0, 0, 0.5)
+    //     &:after
+    //         content: ''
+    //         display: inline-block
+    //         width: 100%
+    //     &:before
+    //         content: ''
+    //         display: block
+    //     & > .navbar-item
+    //         display: inline-block
+    //         padding: 0.25em 1.5em
+    //         position: relative
+    //         text-decoration: none
+    //         color: white
+
     .navbar
-        text-align: justify
-        font-size: 16px
-        line-height: 29px
-        height: 50px
-        background-color: rgba(0, 0, 0, 0.5)
-        &:after
-            content: ''
-            display: inline-block
-            width: 100%
-        &:before
-            content: ''
-            display: block
+        overflow: hidden
+
         & > .navbar-item
-            display: inline-block
-            padding: 0.25em 1.5em
-            position: relative
-            text-decoration: none
+            float: left
+            display: block
             color: white
+            text-align: center
+            padding: 14px 16px
+            text-decoration: none
+            font-size: 17px
+
+        .icon
+            // Hide hamburger menu initially
+            display: none 
+            color: white
+            padding-left: 8px
 
     .header-text
         text-align: center
@@ -83,11 +101,19 @@ header
 
         & > .site-title
             text-transform: uppercase
-            font-size: 48px
+            // The text is 605 x 45 px given font-size 48px, i.e., 13 x 1.
+            // The content max-width is 750 so to fit in one line, the max font size is around 55 (750 / 13).
+            // However, the height should not exceed 10vh since the total space for the banner is 40%.
+            font-size: unquote("min(12vh, 55px, 90vw)")
+            line-height: unquote("min(12vh * 1.2, 55px * 1.2, 90vw)")
+            // font-size: 48px
 
         & > .site-subtitle
             font-style: italic
-            font-size: 17px
+            // The text is 532 x 17 px given font-size 17px, i.e., 31 x 1
+            font-size: 2vh
+            line-height: 3vh
+            // font-size: 17px
 
 .content
     max-width: 750px
@@ -113,3 +139,19 @@ header
         margin-bottom: -5px
     &::first-line
         text-transform: uppercase
+
+/* When the screen is less than 600 pixels wide, hide all navbar items, except for the hamburger menu. */
+@media screen and (max-width: 600px)
+    .navbar a:not(:first-child)
+        display: none
+    .navbar a.icon
+        float: left
+        display: block
+
+    /* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
+    .navbar.responsive
+        position: relative
+    .navbar.responsive a
+        float: none
+        display: block
+        text-align: left
