Added background color to navbar

--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -75,6 +75,7 @@ header
 
     .navbar
         overflow: hidden
+        background-color: rgba(0, 0, 0, 0.25)
 
         & > .navbar-item
             float: left
