--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -94,6 +94,12 @@ header
             font-size: unquote("min(750px / 31, 90vw / 31, 8vh, 17px)")
             line-height: unquote("min(750px / 31, 90vw / 31, 8vh, 17px) * 1.2")
 
+footer
+    font-style: italic
+    font-size: 19px
+    text-align: center
+    padding-top: 19px    
+
 .content
     max-width: 750px
     margin: auto
