--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -86,13 +86,13 @@ header
             // The content max-width is 750 so to fit in one line, the max font size is around 55 (750 / 13).
             // However, the height should not exceed 10vh since the total space for the banner is 40%.
             font-size: unquote("min(750px / 13, 90vw / 13, 16vh, 48px)")
-            line-height: unquote("min(750px / 13, 90vw / 13, 16vh, 48px) * 1.2")
+            line-height: unquote("min(900px / 13, 108vw / 13, 19vh, 58px)")
 
         & > .site-subtitle
             font-style: italic
             // The text is 532 x 17 px given font-size 17px, i.e., 31 x 1
             font-size: unquote("min(750px / 31, 90vw / 31, 8vh, 17px)")
-            line-height: unquote("min(750px / 31, 90vw / 31, 8vh, 17px) * 1.2")
+            line-height: unquote("min(900px / 31, 108vw / 31, 10vh, 20px)")
 
 footer
     font-style: italic
