--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -84,6 +84,10 @@ footer {
   font-size: 19px;
   text-align: center;
   padding-top: 19px; }
+  footer .mailto {
+    font-style: normal;
+    font-size: 22px;
+    text-decoration: none; }
 
 .content {
   max-width: 750px;
