--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -98,7 +98,12 @@ footer
     font-style: italic
     font-size: 19px
     text-align: center
-    padding-top: 19px    
+    padding-top: 19px
+
+    .mailto
+        font-style: normal
+        font-size: 22px
+        text-decoration: none
 
 .content
     max-width: 750px
